asr data description

--- a/asr_notebook.ipynb
+++ b/asr_notebook.ipynb
@@ -4,44 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Artificial Intelligence Nanodegree\n",
+    "# End-to-End DNN for ASR using CTC\n",
     "\n",
-    "## Voice User Interfaces\n",
-    "\n",
-    "## Project: End-to-End Speech Recognition with Neural Networks\n",
-    "\n",
-    "---\n",
-    "\n",
-    "In this notebook, some template code has already been provided for you, and you will need to implement additional functionality to successfully complete this project. You will not need to modify the included code beyond what is requested. Sections that begin with **'(IMPLEMENTATION)'** in the header indicate that the following blocks of code will require additional functionality which you must provide. Please be sure to read the instructions carefully! \n",
-    "\n",
-    "> **Note**: Once you have completed all of the code implementations, you need to finalize your work by exporting the Jupyter Notebook as an HTML document. Before exporting the notebook to html, all of the code cells need to have been run so that reviewers can see the final implementation and output. You can then export the notebook by using the menu above and navigating to  \\n\",\n",
-    "    \"**File -> Download as -> HTML (.html)**. Include the finished document along with this notebook as your submission.\n",
-    "\n",
-    "In addition to implementing code, there will be questions that you must answer which relate to the project and your implementation. Each section where you will answer a question is preceded by a **'Question X'** header. Carefully read each question and provide thorough answers in the following text boxes that begin with **'Answer:'**. Your project submission will be evaluated based on your answers to each of the questions and the implementation you provide.\n",
-    "\n",
-    ">**Note:** Code and Markdown cells can be executed using the **Shift + Enter** keyboard shortcut.  Markdown cells can be edited by double-clicking the cell to enter edit mode.\n",
-    "\n",
-    "The rubric contains _optional_ \"Stand Out Suggestions\" for enhancing the project beyond the minimum requirements. If you decide to pursue the \"Stand Out Suggestions\", you should include the code in this Jupyter notebook.\n",
-    "\n",
-    "---\n",
     "\n",
     "## Introduction  \n",
     "\n",
-    "In this notebook, you will build a deep neural network that functions as part of an end-to-end automatic speech recognition (ASR) pipeline!  Your completed pipeline will accept raw audio as input and return a predicted transcription of the spoken language.  The full pipeline is summarized in the figure below.\n",
+    "In this notebook, we build a deep neural network (DNN) that functions as part of an end-to-end automatic speech recognition (ASR) pipeline!  The completed pipeline will accept raw audio as input and return a predicted transcription of the spoken language.  The full pipeline is summarized in the figure below.\n",
     "\n",
     "<img src=\"images/pipeline.png\">\n",
     "\n",
-    "- **STEP 1** is a pre-processing step that converts raw audio to one of two feature representations that are commonly used for ASR. \n",
-    "- **STEP 2** is an acoustic model which accepts audio features as input and returns a probability distribution over all potential transcriptions.  After learning about the basic types of neural networks that are often used for acoustic modeling, you will engage in your own investigations, to design your own acoustic model!\n",
-    "- **STEP 3** in the pipeline takes the output from the acoustic model and returns a predicted transcription.  \n",
+    "- **STEP 1** is a pre-processing step that converts raw audio to feature representations, called Spectrogram, which is commonly used for ASR. \n",
+    "- **STEP 2** is an acoustic model which accepts audio features as input and returns a probability distribution over all potential transcriptions.  We design the acoustic model by using the combination of CNN and GRU.\n",
+    "- **STEP 3** the pipeline takes the output from the acoustic model, decodes the frames into a sequence of phonemes by using Connectionist Temporal Classification (CTC) loss function and then returns a predicted transcription.  \n",
     "\n",
-    "Feel free to use the links below to navigate the notebook:\n",
+    "Use the links below to navigate the notebook:\n",
     "- [The Data](#thedata)\n",
     "- [**STEP 1**](#step1): Acoustic Features for Speech Recognition\n",
     "- [**STEP 2**](#step2): Deep Neural Networks for Acoustic Modeling\n",
     "    - [Model 0](#model0): RNN\n",
     "    - [Model 1](#model1): RNN + TimeDistributed Dense\n",
-    "    - [Model 2](#model2): CNN + RNN + TimeDistributed Dense\n",
+    "    - [Model 2](#model2): CNN + Deep RNN + TimeDistributed Dense\n",
     "    - [Model 3](#model3): Deeper RNN + TimeDistributed Dense\n",
     "    - [Model 4](#model4): Bidirectional RNN + TimeDistributed Dense\n",
     "    - [Models 5+](#model5)\n",
@@ -52,12 +34,13 @@
     "<a id='thedata'></a>\n",
     "## The Data\n",
     "\n",
-    "We begin by investigating the dataset that will be used to train and evaluate your pipeline.  [LibriSpeech](http://www.danielpovey.com/files/2015_icassp_librispeech.pdf) is a large corpus of English-read speech, designed for training and evaluating models for ASR.  The dataset contains 1000 hours of speech derived from audiobooks.  We will work with a small subset in this project, since larger-scale data would take a long while to train.  However, after completing this project, if you are interested in exploring further, you are encouraged to work with more of the data that is provided [online](http://www.openslr.org/12/).\n",
+    "We begin by investigating the dataset that will be used to train and evaluate your pipeline.  [LibriSpeech](http://www.danielpovey.com/files/2015_icassp_librispeech.pdf) is a large corpus of English-read speech, designed for training and evaluating models for ASR.  The dataset contains 1000 hours of speech derived from audiobooks.  We will work with a small subset in this project, since larger-scale data would take a long while to train.  \n",
     "\n",
-    "In the code cells below, you will use the `vis_train_features` module to visualize a training example.  The supplied argument `index=0` tells the module to extract the first example in the training set.  (You are welcome to change `index=0` to point to a different training example, if you like, but please **DO NOT** amend any other code in the cell.)  The returned variables are:\n",
+    "In the code cells below, you will use the `vis_train_features` module to visualize a training example.  The supplied argument `index=0` tells the module to extract the first example in the training set.  (You can change `index=0` to point to a different training example. \n",
+    "\n",
+    "The returned variables are:\n",
     "- `vis_text` - transcribed text (label) for the training example.\n",
     "- `vis_raw_audio` - raw audio waveform for the training example.\n",
-    "- `vis_mfcc_feature` - mel-frequency cepstral coefficients (MFCCs) for the training example.\n",
     "- `vis_spectrogram_feature` - spectrogram for the training example. \n",
     "- `vis_audio_path` - the file path to the training example."
    ]
