update comments on asr notebook

--- a/asr_notebook.ipynb
+++ b/asr_notebook.ipynb
@@ -1486,7 +1486,7 @@
     "Besides using more data to train the model, there are two methods that we can try to improve model performance.\n",
     "1. One standard way to improve the results of the decoder is to incorporate a `language model (LM)`. The job of a LM is to inject the language knowledge into the words-to-text step in ASR, providing another layer of processing between words and text to solve ambiguities in spelling and context. Google AI Language recently published [BERT]( https://arxiv.org/abs/1810.04805) which applies the bidirectional training of `Transformer`, an attention model, to language modelling. BERT seems like a promising approach to try.\n",
     "\n",
-    "2. Other than CTC, we can try two other popular ASR architectures:\n",
+    "2. Alternately, we can try two other popular ASR architectures:\n",
     "    - attention-based `Seq2Seq` models which powered [Listend-Attend-Spell](https://arxiv.org/abs/1508.01211)\n",
     "    - `RNN-Transducer`, which can be thought of as an encoder-decoder model, assumes the alignment between input and output tokens is local and monotonic. RNN-Transducer implementation has shown success without LMs.\n",
     "    \n",
