move hyperlinks from notebook to readme

--- a/asr_notebook.ipynb
+++ b/asr_notebook.ipynb
@@ -162,7 +162,7 @@
     "\n",
     "### Spectrograms\n",
     "\n",
-    "The first option for an audio feature representation is the [spectrogram](https://www.youtube.com/watch?v=_FatxGN3vAM). The code for calculating the spectrogram was borrowed from [Baidu's Deep Speech repository](https://github.com/baidu-research/ba-dls-deepspeech).  The implementation appears in the `utils.py` file in the repository.\n",
+    "The first option for an audio feature representation is spectrogram. The code for calculating the spectrogram was borrowed from [Baidu's Deep Speech repository](https://github.com/baidu-research/ba-dls-deepspeech).  The implementation appears in the `utils.py` file in the repository.\n",
     "\n",
     "The code returns the spectrogram as a 2D tensor, where the first (_vertical_) dimension indexes time, and the second (_horizontal_) dimension indexes frequency.  To speed the convergence of the algorithm, we have also normalized the spectrogram.  (You can see this quickly in the visualization below by noting that the mean value hovers around zero, and most entries in the tensor assume values close to zero.)"
    ]
@@ -212,7 +212,7 @@
    "source": [
     "### Mel-Frequency Cepstral Coefficients (MFCCs)\n",
     "\n",
-    "The second option for an audio feature representation is [MFCCs](https://en.wikipedia.org/wiki/Mel-frequency_cepstrum).  MFCCs are calculated using the python package -- [Python Speech Features](https://github.com/jameslyons/python_speech_features).  Just as with the spectrogram features, the MFCCs are normalized.\n",
+    "The second option for an audio feature representation is MFCCs. MFCCs are calculated using the python package -- [Python Speech Features](https://github.com/jameslyons/python_speech_features).  Just as with the spectrogram features, the MFCCs are normalized.\n",
     "\n",
     "The main idea behind MFCC features is the same as spectrogram features: at each time window, the MFCC feature yields a feature vector that characterizes the sound within the window.  Note that the MFCC feature is much lower-dimensional than the spectrogram feature. This dimension reduction characteristics could help an acoustic model to avoid overfitting to the training dataset. "
    ]
@@ -360,7 +360,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will train the acoustic model with the [CTC loss](http://www.cs.toronto.edu/~graves/icml_2006.pdf) criterion. CTC implementation details is in the `train_utils.py` file in the repository.\n",
+    "We will train the acoustic model with the CTC loss criterion. CTC implementation details is in the `train_utils.py` file in the repository.\n",
     "\n",
     "To train the architecture, use the `train_model` function within the `train_utils` module. The `train_model` function takes three **required** arguments:\n",
     "- `input_to_softmax` - a Keras model instance.\n",
@@ -448,8 +448,8 @@
     "### (IMPLEMENTATION) Model 1: RNN + TimeDistributed Dense\n",
     "\n",
     "In this model, we will be adding two additional layers on top of the previous RNN model:\n",
-    "1. add [TimeDistributed](https://keras.io/layers/wrappers/) layer to find more complex patterns in the dataset, and\n",
-    "2. add [BatchNormalization](https://keras.io/layers/normalization/) layer to reduce training times.  (Reference: [batch normalization](https://arxiv.org/pdf/1510.01378.pdf))     \n",
+    "1. add TimeDistributed layer to find more complex patterns in the dataset, and\n",
+    "2. add BatchNormalization layer to reduce training times.     \n",
     "\n",
     "The unrolled snapshot of the architecture is depicted below.\n",
     "\n",
@@ -841,9 +841,8 @@
    "source": [
     "<a id='model4'></a>\n",
     "### (IMPLEMENTATION) Model 4: Bidirectional RNN + TimeDistributed Dense\n",
-    "\n",
-    "In this model, we will specify an architecture that uses a single bidirectional RNN layer, before a (`TimeDistributed`) dense layer.  The added value of a bidirectional RNN is described well in [this paper](http://www.cs.toronto.edu/~hinton/absps/DRNN_speech.pdf).\n",
-    "> One shortcoming of conventional RNNs is that they are only able to make use of previous context. In speech recognition, where whole utterances are transcribed at once, there is no reason not to exploit future context as well.  Bidirectional RNNs do this by processing the data in both directions with two separate hidden layers which are then fed forwards to the same output layer.\n",
+    "One shortcoming of conventional RNNs is that they are only able to make use of previous context. In speech recognition, where whole utterances are transcribed at once, there is no reason not to exploit future context as well.  Bidirectional RNNs do this by processing the data in both directions with two separate hidden layers which are then fed forwards to the same output layer. \n",
+    "In this model, we will specify an architecture that uses a single bidirectional RNN layer, before a (`TimeDistributed`) dense layer.\n",
     "\n",
     "<img src=\"images/bidirectional_rnn_model.png\" width=\"80%\">"
    ]
@@ -1048,12 +1047,12 @@
     "<a id='final'></a>\n",
     "### (IMPLEMENTATION) Final Model Design\n",
     "\n",
-    "Now that we've tried out many models, we want to incorporate the explored layers above into a deeper architecture. Since overfitting is an issue when implementing CNN with RNN, we will add [variational inference based dropout technique](http://arxiv.org/abs/1512.05287) in our GRU models.\n",
+    "Now that we've tried out many models, we want to incorporate the explored layers above into a deeper architecture. Since overfitting is an issue when implementing CNN with RNN, we will add variational inference based dropout technique in our GRU models.\n",
     "\n",
     "CNN seems to enhance model performance, so we will include it in the final model. Further more, we may get better results by working with [dilated convolutions](https://arxiv.org/abs/1609.03499).\n",
     "For an example of a speech-to-text system that makes use of dilated convolutions, check out this GitHub [repository](https://github.com/buriburisuri/speech-to-text-wavenet).  \n",
     "\n",
-    "So far, we have experimented with a single bidirectional RNN layer.  In the final model, we'd consider stacking the bidirectional layers, to produce a [deep bidirectional RNN](https://www.cs.toronto.edu/~graves/asru_2013.pdf)!\n",
+    "So far, we have experimented with a single bidirectional RNN layer.  In the final model, we'd consider stacking the bidirectional layers, to produce a deep bidirectional RNN!\n",
     "\n",
     "All models that we specify in this repository should have `output_length` defined as an attribute.  This attribute is a lambda function that maps the (temporal) length of the input acoustic features to the (temporal) length of the output softmax layer.  This function is used in the computation of CTC loss; to see this, look at the `add_ctc_loss` function in `train_utils.py`.  To see where the `output_length` attribute is defined for the models in the code, take a look at the `models.py` file.  \n",
     "Note that in the case of models that use purely recurrent layers, the lambda function is the identity function, as the recurrent layers do not modify the (temporal) length of their input tensors.  However, convolutional layers are more complicated and require a specialized function (`cnn_output_length` in `models.py`) to determine the temporal length of their output."
@@ -1493,6 +1492,15 @@
     "Final words about LM: [Deep Speech 3](http://research.baidu.com/Blog/index-view?id=90)\n",
     ">Language models are vital to speech recognition because language models can be trained rapidly on much larger datasets, and secondly language models can be used for specializing the speech recognition model according to context (user, geography, application etc.) without a labeled speech corpus for each context. The latter is especially vital in a production speech recognition system."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
